[package]
name = "cpu-count"
version = "0.1.0"
description = "module that returns the number of processors in the current device"
authors = ["Javier Belbruno"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
